@startuml

hide methods
left to right direction
skinparam classAttributeIconSize 0
skinparam classBackgroundColor beige
skinparam ArrowColor #222222


package "<<aggregate>> AGV" {
    entity AGV
    class BriefDescription
    class Model
    class AGVStatus
    class AGVTask
    class MaxWeightCapacity
    class MaxVolumeCapacity
    class AGVPosition
    class AGVId
    class Range
}


entity AGV <<entity>> <<root>> {
    -state
}


entity AGV <<entity>> <<root>> {}

class BriefDescription <<(V,#FF8B40) value object>> {
-briefDescription
}

class Model <<(V,#FF8B40) value object>> {
-model
}

class AGVPosition <<(V,#FF8B40) value object>> {
-agvPosition
}

class AGVStatus<<(V,#FF8B40) value object>> {
    -taskState
}

class AGVTask<<(V,#FF8B40) value object>> {
    -agvTask
}

class AGVId <<(V,#FF8B40) value object>> {
-id
}

class Range <<(V,#FF8B40) value object>> {
-range
}

class MaxWeightCapacity <<(V,#FF8B40) value object>> {
-maxWeightCapacity
}

class MaxVolumeCapacity <<(V,#FF8B40) value object>> {
-volume
}

package "<<aggregate>> ProductOrder"{
    entity ProductOrder
    entity OrderItem
    class TotalPriceWithoutVAT
    class TotalPriceWithVAT
    class Status
    class TotalVolume
    class TotalWeight
    class DeliveryAddress
    class BillingAddress
}


entity ProductOrder <<entity>> <<root>> {
- numericIdentifier
- dateOfOrder
- shipmentMethod
- paymentMethod

}

entity OrderItem <<entity>> {
    -itemQuantity
}

class TotalPriceWithoutVAT <<(V,#FF8B40) value object>> {}
class TotalPriceWithVAT <<(V,#FF8B40) value object>> {}
class DeliveryAddress <<(V,#FF8B40) value object>> {}
class BillingAddress <<(V,#FF8B40) value object>> {}
class Status <<(V,#FF8B40) value object>> {}
class TotalVolume <<(V,#FF8B40) value object>> {}
class TotalWeight <<(V,#FF8B40) value object>> {}


AGV --> "1" AGVId : has
AGV --> "1" Range : respects
AGV --> "1" AGVTask : associated
AGV --> "1..*" AGVStatus : collects
AGV --> "1" Model : has
AGV --> "1" BriefDescription : characterized by
AGV --> "1" MaxWeightCapacity : respects
AGV --> "1" MaxVolumeCapacity : respects
AGV --> "1" AGVPosition : located in

ProductOrder -> "1" TotalPriceWithoutVAT : is marked
ProductOrder --> "1" TotalPriceWithVAT : is marked
ProductOrder --> "1" Status : is in
ProductOrder --> "1" TotalVolume : associated with
ProductOrder --> "1" TotalWeight : associated with
ProductOrder --> "1" DeliveryAddress : associated with
ProductOrder --> "1" BillingAddress : associated with
ProductOrder --> "1..*" OrderItem : composed by

ProductOrder -> "1..*" AGV : associated

@enduml